# paper_agent

./: .gitignore  INSTALL.md  INSTALL_SCRIPTS.md  README.md  __init__.py  agent.py  config.yaml  install.bat  install.ps1  install.sh  main.py  pyproject.toml  requirements.txt
core/: __init__.py  config.py  content_extractor.py  knowledge_aggregator.py  llm_client.py  models.py  pdf_parser.py  report_generator.py  resource_manager.py  structure_analyzer.py
templates/: __init__.py
test/: README.md  __init__.py  run_tests.sh  test_config.py
test/integration/: test_scenarios.sh
test/unit/: test_agent.py  test_resource_extraction.py
